tests/expectations/compiler/const_prop/loop_bounds_fail.out
Error [ECMP0376008]: This loop bound could not be determined at compile time.
    --> compiler-test:8:34
     |
   8 |         for j: u32 in SOME+1u32..STOP+a {
     |                                  ^^^^^^
